--- a/Dashboard/DashboardWindow.xaml
+++ b/Dashboard/DashboardWindow.xaml
@@ -19,7 +19,7 @@
 
         <!-- Sidebar -->
         <StackPanel Grid.Column="0" Background="#F5F7F8">
-            <Image Source="D:\1_STEP Acadermy\Project\WinForm(WPF)\RecipeCookbook\Image\DashboardWindow\logochefe.png" Width="150" Height="180" Margin="20"/>
+            <Image Source="/Image/DashboardWindow/logochefe.png" Width="150" Height="180" Margin="20"/>
 
             <Button Width="200" Height="40" Margin="5" Click="DashboardButton_Click">
                 <Button.Template>
@@ -160,7 +160,7 @@
                             <Grid>
                                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
                                     <!-- Logo -->
-                                    <Image Source="/Image/DashboardWindow/Recipe.png" Width="30" Height="30" Margin="25,0,10,0" RenderTransformOrigin="0.5,0.5">
+                                    <Image Source="/Image/DashboardWindow/AboutUs.png" Width="30" Height="30" Margin="25,0,10,0" RenderTransformOrigin="0.5,0.5">
                                         <Image.RenderTransform>
                                             <ScaleTransform ScaleX="1" ScaleY="1"/>
                                         </Image.RenderTransform>
